# pl-neon-usb

./: .copier-answers.yml  .gitignore  LICENSE  README.md  hooks.py  latest  mkdocs.yml  mypy.ini  pyproject.toml  ruff.toml  versions.json
.github/workflows/: on-release-main.yml
dev/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
dev/generated_examples/collection_speed_both_cameras/: index.html
dev/generated_examples/collection_speed_eye_camera/: index.html
dev/generated_examples/collection_speed_imu/: index.html
dev/generated_examples/imu/: index.html
dev/generated_examples/manual_exposure_eye_uvc/: index.html
dev/generated_examples/manual_exposure_eye_v4l2/: index.html
dev/generated_examples/manual_exposure_scene/: index.html
dev/generated_examples/real-time_visualization/: index.html
dev/generated_examples/reconnecting/: index.html
dev/generated_examples/version_numbers/: index.html
dev/license/: index.html
dev/modules/: index.html
dev/search/: search_index.json
docs/: modules.md
docs/overrides/partials/: logo.html
examples/: collection_speed_both_cameras.py  collection_speed_eye_camera.py  collection_speed_imu.py  imu.py  manual_exposure_eye.py  manual_exposure_eye_uvc.py  manual_exposure_eye_v4l2.py  manual_exposure_scene.py  real-time_visualization.py  reconnecting.py  version_numbers.py
src/pupil_labs/neon_usb/: __init__.py  device.py  frame.py  queue_utils.py  usb_utils.py  uvc_utils.py  v4lstream.py
src/pyrav4l2/: __init__.py  controls.py  device.py
tests/: __init__.py
v0.0.1.post2/: .coverage-tmp.html  404.html  index.html  objects.inv  sitemap.xml
v0.0.1.post2/license/: index.html
v0.0.1.post2/modules/: index.html
v0.0.2/: .coverage-tmp.html  404.html  index.html  sitemap.xml
v0.0.2/generated_examples/collection_speed_both_cameras/: index.html
v0.0.2/generated_examples/collection_speed_eye_camera/: index.html
v0.0.2/generated_examples/collection_speed_imu/: index.html
v0.0.2/generated_examples/imu/: index.html
v0.0.2/generated_examples/manual_exposure_eye_uvc/: index.html
v0.0.2/generated_examples/manual_exposure_eye_v4l2/: index.html
v0.0.2/generated_examples/manual_exposure_scene/: index.html
v0.0.2/generated_examples/real-time_visualization/: index.html
v0.0.2/license/: index.html
v0.0.2/modules/: index.html
(+10 files in other folders)
